--- a/serverless.yml
+++ b/serverless.yml
@@ -101,6 +101,13 @@ provider:
             - Ref: 'AWS::Region'
             - Ref: 'AWS::AccountId'
             - 'parameter/SLACK_URL'
+        - 'Fn::Join':
+          - ':'
+          -
+            - 'arn:aws:ssm'
+            - Ref: 'AWS::Region'
+            - Ref: 'AWS::AccountId'
+            - 'parameter/VERIFICATION_TOKEN'            
   environment:
     CHANNEL_NAME: ${self:custom.channel}
     CHANNEL_LIST_PARAMETER: ${self:custom.channelListParameter}
