--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,13 @@
 service: SlackingBot
 frameworkVersion: ">=1.26.0 <2.0.0"
 
+plugins:
+  - serverless-python-requirements
 
 custom:
   #credentialsProfile: oph-opintopolku-session-dev
+  pythonRequirements:
+    dockerizePip: false
   region: eu-west-1
   domainName: slackingbot.goforecrew.com
   stage: dev
@@ -107,7 +111,7 @@ provider:
             - 'arn:aws:ssm'
             - Ref: 'AWS::Region'
             - Ref: 'AWS::AccountId'
-            - 'parameter/VERIFICATION_TOKEN'            
+            - 'parameter/VERIFICATION_TOKEN'
   environment:
     CHANNEL_NAME: ${self:custom.channel}
     CHANNEL_LIST_PARAMETER: ${self:custom.channelListParameter}
